Code/syntax.output
Terminals unused in grammar

   NOT


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | error COMMA

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | error SEMI

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList
   42        | error COMMA

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT

   62 Args: Exp COMMA Args
   63     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 10 20 27 36 42
INT (258) 19 60
FLOAT (259) 61
ID (260) 15 17 18 21 22 55 56 58 59
SEMI (261) 4 5 7 20 30 32 36 39
COMMA (262) 9 10 23 41 42 62
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
DOT (271) 58
NOT (272)
TYPE (273) 11
LP (274) 21 22 33 34 35 53 55 56
RP (275) 21 22 33 34 35 53 55 56
LB (276) 19 57
RB (277) 19 57
LC (278) 13 26
RC (279) 13 26 27
STRUCT (280) 13 14
RETURN (281) 32
IF (282) 33 34
ELSE (283) 34
WHILE (284) 35
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    左： 0
Program (33)
    左： 1, 右： 0
ExtDefList (34)
    左： 2 3, 右： 1 2
ExtDef (35)
    左： 4 5 6 7, 右： 2
ExtDecList (36)
    左： 8 9 10, 右： 4 9
Specifier (37)
    左： 11 12, 右： 4 5 6 25 39
StructSpecifier (38)
    左： 13 14, 右： 12
OptTag (39)
    左： 15 16, 右： 13
Tag (40)
    左： 17, 右： 14
VarDec (41)
    左： 18 19 20, 右： 8 9 19 25 43 44
FunDec (42)
    左： 21 22, 右： 6
VarList (43)
    左： 23 24, 右： 21 23
ParamDec (44)
    左： 25, 右： 23 24
CompSt (45)
    左： 26 27, 右： 6 31
StmtList (46)
    左： 28 29, 右： 26 28
Stmt (47)
    左： 30 31 32 33 34 35 36, 右： 28 33 34 35
DefList (48)
    左： 37 38, 右： 13 26 37
Def (49)
    左： 39, 右： 37
DecList (50)
    左： 40 41 42, 右： 39 41
Dec (51)
    左： 43 44, 右： 40 41
Exp (52)
    左： 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61, 右：
    30 32 33 34 35 44 45 46 47 48 49 50 51 52 53 54 57 58 62 63
Args (53)
    左： 62 63, 右： 55 62


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  转到状态 18
    VarDec      转到状态 19
    FunDec      转到状态 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   10 ExtDecList: error . COMMA
   20 VarDec: error . SEMI

    SEMI   shift, and go to state 22
    COMMA  shift, and go to state 23


State 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  转到状态 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 32
    Def              转到状态 33


State 22

   20 VarDec: error SEMI .

    $default  reduce using rule 20 (VarDec)


State 23

   10 ExtDecList: error COMMA .

    $default  reduce using rule 10 (ExtDecList)


State 24

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 36
    ParamDec         转到状态 37


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 15
    ID     shift, and go to state 38

    ExtDecList  转到状态 39
    VarDec      转到状态 19


State 27

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 28

   27 CompSt: error . RC

    RC  shift, and go to state 41


State 29

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 42
    Def              转到状态 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   39 Def: Specifier . DecList SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   转到状态 44
    DecList  转到状态 45
    Dec      转到状态 46


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 33

   37 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 48
    Def              转到状态 33


State 34

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 35

   25 ParamDec: Specifier . VarDec

    error  shift, and go to state 49
    ID     shift, and go to state 38

    VarDec  转到状态 50


State 36

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 24 (VarList)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 29
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    转到状态 63
    StmtList  转到状态 64
    Stmt      转到状态 65
    Exp       转到状态 66


State 43

   20 VarDec: error . SEMI
   42 DecList: error . COMMA

    SEMI   shift, and go to state 22
    COMMA  shift, and go to state 67


State 44

   19 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 27

    $default  reduce using rule 43 (Dec)


State 45

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 46

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 40 (DecList)


State 47

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 48

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 49

   20 VarDec: error . SEMI

    SEMI  shift, and go to state 22


State 50

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 25 (ParamDec)


State 51

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 52

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 71
    ParamDec         转到状态 37


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   27 CompSt: error . RC
   36 Stmt: error . SEMI

    SEMI  shift, and go to state 72
    RC    shift, and go to state 41


State 55

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


State 56

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


State 57

   55 Exp: ID . LP Args RP
   56    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 59 (Exp)


State 58

   54 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 74


State 59

   53 Exp: LP . Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 75


State 60

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 76


State 61

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 62

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 78


State 63

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 64

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 65

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 29
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    转到状态 63
    StmtList  转到状态 80
    Stmt      转到状态 65
    Exp       转到状态 66


State 66

   30 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 67

   42 DecList: error COMMA .

    $default  reduce using rule 42 (DecList)


State 68

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 92


State 69

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 70

   41 DecList: Dec COMMA . DecList

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   转到状态 44
    DecList  转到状态 93
    Dec      转到状态 46


State 71

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 72

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 73

   55 Exp: ID LP . Args RP
   56    | ID LP . RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 94

    Exp   转到状态 95
    Args  转到状态 96


State 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 54 (Exp)


State 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 97
    LB        shift, and go to state 91


State 76

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 77

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 99


State 78

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 100


State 79

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 80

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 81

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 82

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 101


State 83

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 102


State 84

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 103


State 85

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 104


State 86

   51 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 105


State 87

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 106


State 88

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 107


State 89

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 108


State 90

   58 Exp: Exp DOT . ID

    ID  shift, and go to state 109


State 91

   57 Exp: Exp LB . Exp RB

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 110


State 92

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 44 (Dec)


State 93

   41 DecList: Dec COMMA DecList .

    $default  reduce using rule 41 (DecList)


State 94

   56 Exp: ID LP RP .

    $default  reduce using rule 56 (Exp)


State 95

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   62 Args: Exp . COMMA Args
   63     | Exp .

    COMMA     shift, and go to state 111
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 63 (Args)


State 96

   55 Exp: ID LP Args . RP

    RP  shift, and go to state 112


State 97

   53 Exp: LP Exp RP .

    $default  reduce using rule 53 (Exp)


State 98

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 99

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 113
    LB        shift, and go to state 91


State 100
